--- a/project6/index6.html
+++ b/project6/index6.html
@@ -9,6 +9,7 @@
     <script
         src="https://kit.fontawesome.com/7a4b62b0a4.js" crossorigin="anonymous"
    > </script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -16,6 +17,7 @@
         <div class="logo">
             MyTunes
         </div>
+        <div class="menu_bar"><i class="fas fa-bars"></i></div>
         <ul>
             <a href="#hero"><li>Overview</li></a>
             <a href="#music"><li>Music</li></a>
